# llm-relay

./: .gitignore  Makefile  README.md  SECURITY.md  llm-mode  pyproject.toml
.github/workflows/: tests.yml
cli/: llm-relay
config/: api_keys.example.yaml  models.yaml  modes.yaml  policy.yaml  providers.yaml
docs/: operations.md  routing-algorithm.md  v2-features.md
docs/design/: 2026-05-30-host-qualified-model-identity.md
llm_relay/: __init__.py  auth.py  cli.py  jobs.py  jobworker.py  logbuffer.py  metrics.py  scheduler.py
llm_relay/a2a/: __init__.py  card.py  executor.py  routes.py
llm_relay/api/: __init__.py  app.py  instrumentation.py  middleware.py
llm_relay/config/: __init__.py  loader.py  types.py
llm_relay/discovery/: __init__.py  endpoint.py  manager.py
llm_relay/mcp/: __init__.py  server.py
llm_relay/routing/: __init__.py  keys.py  router.py  selector.py
tests/: __init__.py  test_api.py  test_auth.py  test_broad_endpoints.py  test_context_clamp.py  test_discovery_dynamic.py  test_dispatcher.py  test_identity.py  test_jobs.py  test_jobs_api.py  test_jobworker.py  test_log_streaming.py  test_mcp_tools.py  test_metrics.py  test_metrics_integration.py  test_paused.py  test_provider_config.py  test_request_filters.py  test_retry_chain.py  test_router_timeout.py  test_saturation.py  test_scheduler.py  test_selector.py  test_stream_lifecycle.py  test_stream_outcome.py  test_telemetry_span_attrs.py  test_variant_registry.py
