[project]
name = "llm-relay"
version = "1.0.0"
description = "Lightweight LLM routing control plane for homelab + cloud backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "rich>=13.0",
]

[project.scripts]
llm-relay = "llm_relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_relay"]
