[project]
name = "llm-relay"
version = "1.0.0"
description = "Lightweight LLM routing control plane for homelab + cloud backends"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brady Dibble" },
]
keywords = ["llm", "routing", "openai", "fastapi", "homelab", "control-plane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Networking",
]
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
mcp = [
    "mcp>=1.10",
]
a2a = [
    "a2a-sdk>=1.0",
]
all = [
    "mcp>=1.10",
    "a2a-sdk>=1.0",
]

[project.urls]
Homepage = "https://github.com/bradydibble/llm-relay"
Repository = "https://github.com/bradydibble/llm-relay"
Issues = "https://github.com/bradydibble/llm-relay/issues"

[project.scripts]
llm-relay = "llm_relay.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_relay"]
